--- a/sass/components/_all.sass
+++ b/sass/components/_all.sass
@@ -1,6 +1,5 @@
 /* Bulma Components */
 @charset "utf-8"
-
 @import "breadcrumb"
 @import "card"
 @import "dropdown"
@@ -13,3 +12,8 @@
 @import "pagination"
 @import "panel"
 @import "tabs"
+
+
+@import "counter"
+@import "barloader"
+@import "datepicker"
