--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -50,6 +50,26 @@ $navbar-breakpoint: $desktop !default
 
 $navbar-colors: $colors !default
 
+$navbar-background-color-invert: findColorInvert($scheme-main) !default
+$navbar-box-shadow-color-invert: findColorInvert($background) !default
+$navbar-item-color-invert: findColorInvert($text) !default
+$navbar-item-hover-color-invert: findColorInvert($link) !default
+$navbar-item-hover-background-color-invert: findColorInvert($scheme-main-bis) !default
+$navbar-item-active-color-invert: findColorInvert($scheme-invert) !default
+$navbar-item-active-background-color-invert: transparent !default
+$navbar-burger-color-invert: findColorInvert($navbar-item-color) !default
+$navbar-tab-hover-background-color-invert: transparent !default
+$navbar-tab-hover-border-bottom-color-invert: findColorInvert($link) !default
+$navbar-tab-active-color-invert: findColorInvert($link)!default
+$navbar-tab-active-background-color-invert: transparent !default
+$navbar-tab-active-border-bottom-color-invert: findColorInvert($link) !default
+$navbar-dropdown-background-color-invert: $black !default
+$navbar-dropdown-item-hover-color-invert:  findColorInvert($scheme-invert) !default
+$navbar-dropdown-item-hover-background-color-invert: findColorInvert($background) !default
+$navbar-dropdown-item-active-color-invert: findColorInvert($link) !default
+$navbar-dropdown-item-active-background-color-invert: findColorInvert($background) !default
+$navbar-divider-background-color-invert: $border !default
+
 =navbar-fixed
   left: 0
   position: fixed
@@ -67,10 +87,15 @@ $navbar-colors: $colors !default
     &.is-#{$name}
       background-color: $color
       color: $color-invert
+      +darktheme
+        background-color: $color-invert
+        color: $color
       .navbar-brand
         & > .navbar-item,
         .navbar-link
           color: $color-invert
+          +darktheme
+            color: $color
         & > a.navbar-item,
         .navbar-link
           &:focus,
@@ -78,17 +103,26 @@ $navbar-colors: $colors !default
           &.is-active
             background-color: bulmaDarken($color, 5%)
             color: $color-invert
+            +darktheme
+              background-color: bulmaDarken($color-invert, 5%)
+              color: $color
         .navbar-link
           &::after
             border-color: $color-invert
+            +darktheme
+              border-color: $color
       .navbar-burger
         color: $color-invert
+        +darktheme
+          color: $color
       +from($navbar-breakpoint)
         .navbar-start,
         .navbar-end
           & > .navbar-item,
           .navbar-link
             color: $color-invert
+            +darktheme
+                color: $color
           & > a.navbar-item,
           .navbar-link
             &:focus,
@@ -96,19 +130,32 @@ $navbar-colors: $colors !default
             &.is-active
               background-color: bulmaDarken($color, 5%)
               color: $color-invert
+              +darktheme
+                background-color: bulmaDarken($color-invert, 5%)
+                color: $color
+
           .navbar-link
             &::after
               border-color: $color-invert
+              +darktheme
+                border-color: $color
+
         .navbar-item.has-dropdown:focus .navbar-link,
         .navbar-item.has-dropdown:hover .navbar-link,
         .navbar-item.has-dropdown.is-active .navbar-link
           background-color: bulmaDarken($color, 5%)
           color: $color-invert
+          +darktheme
+            background-color: bulmaDarken($color-invert, 5%)
+            color: $color
         .navbar-dropdown
           a.navbar-item
             &.is-active
               background-color: $color
               color: $color-invert
+              +darktheme
+                background-color: $color-invert
+                color: $color
   & > .container
     align-items: stretch
     display: flex
@@ -168,6 +215,9 @@ body
   line-height: 1.5
   padding: 0.5rem 0.75rem
   position: relative
+  +darktheme
+    color: $navbar-item-color-invert
+
   .icon
     &:only-child
       margin-left: -0.25rem
@@ -182,7 +232,9 @@ a.navbar-item,
   &.is-active
     background-color: $navbar-item-hover-background-color
     color: $navbar-item-hover-color
-
+    +darktheme  
+      background-color: $navbar-item-hover-background-color-invert
+      color: $navbar-item-hover-color-invert
 .navbar-item
   flex-grow: 0
   flex-shrink: 0
@@ -201,6 +253,10 @@ a.navbar-item,
     &:hover
       background-color: $navbar-tab-hover-background-color
       border-bottom-color: $navbar-tab-hover-border-bottom-color
+      +darktheme
+        background-color: $navbar-tab-hover-background-color-invert
+        border-bottom-color: $navbar-tab-hover-border-bottom-color-invert
+
     &.is-active
       background-color: $navbar-tab-active-background-color
       border-bottom-color: $navbar-tab-active-border-bottom-color
@@ -208,6 +264,10 @@ a.navbar-item,
       border-bottom-width: $navbar-tab-active-border-bottom-width
       color: $navbar-tab-active-color
       padding-bottom: calc(0.5rem - #{$navbar-tab-active-border-bottom-width})
+      +darktheme
+        background-color: $navbar-tab-active-background-color-invert
+        border-bottom-color: $navbar-tab-active-border-bottom-color-invert
+        color: $navbar-tab-active-color-invert
 
 .navbar-content
   flex-grow: 1
@@ -220,6 +280,9 @@ a.navbar-item,
     border-color: $navbar-dropdown-arrow
     margin-top: -0.375em
     +ltr-position(1.125em)
+    +darktheme
+        border-color: findColorInvert($navbar-dropdown-arrow)
+
 
 .navbar-dropdown
   font-size: 0.875rem
@@ -235,6 +298,9 @@ a.navbar-item,
   display: none
   height: $navbar-divider-height
   margin: 0.5rem 0
+  +darktheme
+    background-color: $navbar-divider-background-color-invert
+
 
 +until($navbar-breakpoint)
   .navbar > .container
@@ -251,6 +317,9 @@ a.navbar-item,
     background-color: $navbar-background-color
     box-shadow: 0 8px 16px bulmaRgba($scheme-invert, 0.1)
     padding: 0.5rem 0
+    +darktheme
+      background-color: $black
+
     &.is-active
       display: block
   // Fixed navbar
@@ -314,9 +383,16 @@ a.navbar-item,
           &:hover
             background-color: $navbar-dropdown-item-hover-background-color
             color: $navbar-dropdown-item-hover-color
+            +darktheme
+              background-color: $navbar-dropdown-item-hover-background-color-invert
+              color: $navbar-dropdown-item-hover-color-invert
           &.is-active
             background-color: $navbar-dropdown-item-active-background-color
             color: $navbar-dropdown-item-active-color
+            +darktheme
+              background-color: $navbar-dropdown-item-active-background-color-invert
+              color: $navbar-dropdown-item-active-color-invert
+
   .navbar-burger
     display: none
   .navbar-item,
@@ -369,6 +445,9 @@ a.navbar-item,
     position: absolute
     top: 100%
     z-index: $navbar-dropdown-z
+    +darktheme
+      background-color: $navbar-dropdown-background-color-invert
+
     .navbar-item
       padding: 0.375rem 1rem
       white-space: nowrap
@@ -378,9 +457,16 @@ a.navbar-item,
       &:hover
         background-color: $navbar-dropdown-item-hover-background-color
         color: $navbar-dropdown-item-hover-color
+        +darktheme
+          background-color: $navbar-dropdown-item-hover-background-color-invert
+          color: $navbar-dropdown-item-hover-color-invert
+
       &.is-active
         background-color: $navbar-dropdown-item-active-background-color
         color: $navbar-dropdown-item-active-color
+        +darktheme
+          background-color: $navbar-dropdown-item-active-background-color-invert
+          color: $navbar-dropdown-item-active-color-invert
     .navbar.is-spaced &,
     &.is-boxed
       border-radius: $navbar-dropdown-boxed-radius
@@ -430,14 +516,22 @@ a.navbar-item,
   .navbar-link
     &.is-active
       color: $navbar-item-active-color
+      +darktheme
+        color: $navbar-item-active-color-invert
+
     &.is-active:not(:focus):not(:hover)
       background-color: $navbar-item-active-background-color
+      +darktheme
+        background-color: $navbar-item-active-background-color-invert
+
   .navbar-item.has-dropdown
     &:focus,
     &:hover,
     &.is-active
       .navbar-link
         background-color: $navbar-item-hover-background-color
+        +darktheme
+          background-color: $navbar-item-hover-background-color-invert
 
 // Combination
 
