Init mixin docs

--- a/docs/_includes/components/categories.html
+++ b/docs/_includes/components/categories.html
@@ -8,17 +8,15 @@
     {% assign category_links = site.data.links.categories[category_id] %}
     {% assign category_link = site.data.links.by_id[category_id] %}
 
-    {% comment %}
     {% if category_id == 'overview' %}
       <p class="bd-category-group">
-        Learn
+        Concepts
       </p>
     {% elsif category_id == 'columns' %}
       <p class="bd-category-group">
-        Style
+        Library
       </p>
     {% endif %}
-    {% endcomment %}
 
     <div class="bd-category {% if category_id == current_category %}is-current{% endif %}">
       <header class="bd-category-header">
