--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -40,77 +40,77 @@ $radius: 0.375em;
 $bd-edge-width: 11.25rem;
 $bd-edge-offset: 2rem;
 
-@import '../sass/utilities/initial-variables';
-@import '../sass/utilities/functions';
+@import "../sass/utilities/initial-variables";
+@import "../sass/utilities/functions";
 
 $custom-colors: (
-  'expo': (
+  "expo": (
     $star,
     $white,
     findLightColor($star),
     findDarkColor($star),
   ),
-  'love': (
+  "love": (
     $red,
     $white,
     findLightColor($red),
     findDarkColor($red),
   ),
-  'patreon': (
+  "patreon": (
     $patreon,
     $white,
     findLightColor($patreon),
     findDarkColor($patreon),
   ),
-  'rss': (
+  "rss": (
     $rss,
     $white,
     findLightColor($rss),
     findDarkColor($rss),
   ),
-  'bleeding': (
+  "bleeding": (
     $bleeding-green,
     findColorInvert($bleeding-green),
     findLightColor($bleeding-green),
     findDarkColor($bleeding-green),
   ),
-  'sass': (
+  "sass": (
     $sass,
     $white,
     findLightColor($sass),
     findDarkColor($sass),
   ),
-  'amazon': (
+  "amazon": (
     $amazon,
     findColorInvert($amazon),
     findLightColor($amazon),
     findDarkColor($amazon),
   ),
-  'sponsor': (
+  "sponsor": (
     $rose,
     $white,
     findLightColor($rose),
     findDarkColor($rose),
   ),
-  'twitter': (
+  "twitter": (
     $twitter,
     $white,
     findLightColor($twitter),
     findDarkColor($twitter),
   ),
-  'videos': (
+  "videos": (
     $green,
     $white,
     findLightColor($green),
     findDarkColor($green),
   ),
-  'extensions': (
+  "extensions": (
     $cyan,
     $white,
     findLightColor($cyan),
     findDarkColor($cyan),
   ),
-  'bootstrap': (
+  "bootstrap": (
     $bootstrap,
     $white,
     findLightColor($bootstrap),
@@ -118,11 +118,11 @@ $custom-colors: (
   ),
 );
 
-@import '../sass/utilities/derived-variables';
+@import "../sass/utilities/derived-variables";
 
 $navbar-breakpoint: $tablet;
 
-@import '../bulma';
+@import "../bulma";
 
 %center {
   align-items: center;
@@ -175,7 +175,7 @@ $navbar-breakpoint: $tablet;
     @include overlay;
     background-color: $scheme-main-bis;
     border-radius: $radius-large;
-    content: '';
+    content: "";
     display: block;
     opacity: 0;
     pointer-events: none;
@@ -193,56 +193,58 @@ $navbar-breakpoint: $tablet;
   }
 }
 
-@import './_sass/base/css-vars';
-@import './_sass/base/custom';
-@import './_sass/base/helpers';
+@import "./_sass/base/css-vars";
+@import "./_sass/base/custom";
+@import "./_sass/base/helpers";
 
-@import './_sass/components/anchors';
-@import './_sass/components/options';
-@import './_sass/components/banner';
-@import './_sass/components/call';
-@import './_sass/components/carbon';
-@import './_sass/components/categories';
-@import './_sass/components/code';
-@import './_sass/components/content';
-@import './_sass/components/hero';
-@import './_sass/components/highlight';
-@import './_sass/components/klmn';
-@import './_sass/components/navbar';
-@import './_sass/components/notification';
-@import './_sass/components/pagination';
-@import './_sass/components/features';
-@import './_sass/components/links';
-@import './_sass/components/screenshots';
-@import './_sass/components/drawing';
-@import './_sass/components/variables';
-@import './_sass/components/book';
-@import './_sass/components/native';
-@import './_sass/components/fortyfour';
-@import './_sass/components/spacing-table';
-@import './_sass/components/survey';
+@import "./_sass/components/anchors";
+@import "./_sass/components/options";
+@import "./_sass/components/banner";
+@import "./_sass/components/call";
+@import "./_sass/components/carbon";
+@import "./_sass/components/categories";
+@import "./_sass/components/code";
+@import "./_sass/components/content";
+@import "./_sass/components/hero";
+@import "./_sass/components/highlight";
+@import "./_sass/components/klmn";
+@import "./_sass/components/navbar";
+@import "./_sass/components/notification";
+@import "./_sass/components/pagination";
+@import "./_sass/components/features";
+@import "./_sass/components/links";
+@import "./_sass/components/screenshots";
+@import "./_sass/components/drawing";
+@import "./_sass/components/variables";
+@import "./_sass/components/book";
+@import "./_sass/components/native";
+@import "./_sass/components/fortyfour";
+@import "./_sass/components/spacing-table";
+@import "./_sass/components/survey";
 
-@import './_sass/pages/index';
-@import './_sass/pages/docs';
-@import './_sass/pages/videos';
-@import './_sass/pages/love';
-@import './_sass/pages/expo';
-@import './_sass/pages/backers';
-@import './_sass/pages/blog';
-@import './_sass/pages/single';
-@import './_sass/pages/extensions';
-@import './_sass/pages/made-with-bulma';
-@import './_sass/pages/bootstrap';
+@import "./_sass/pages/index";
+@import "./_sass/pages/docs";
+@import "./_sass/pages/videos";
+@import "./_sass/pages/love";
+@import "./_sass/pages/expo";
+@import "./_sass/pages/backers";
+@import "./_sass/pages/blog";
+@import "./_sass/pages/single";
+@import "./_sass/pages/extensions";
+@import "./_sass/pages/made-with-bulma";
+@import "./_sass/pages/bootstrap";
 
-@import './_sass/index/hello';
-@import './_sass/index/focus';
-@import './_sass/index/focus-animations';
-@import './_sass/index/best';
-@import './_sass/index/sponsors';
-@import './_sass/index/heading';
-@import './_sass/index/columns';
-@import './_sass/index/custom';
+@import "./_sass/index/hello";
+@import "./_sass/index/focus";
+@import "./_sass/index/focus-animations";
+@import "./_sass/index/best";
+@import "./_sass/index/sponsors";
+@import "./_sass/index/heading";
+@import "./_sass/index/columns";
+@import "./_sass/index/custom";
 
-@import './_sass/global/support';
-@import './_sass/global/newsletter';
-@import './_sass/global/cc';
+@import "./_sass/global/support";
+@import "./_sass/global/newsletter";
+@import "./_sass/global/cc";
+
+@import "./_sass/examples/mixins";
