More mixin docs

--- a/docs/_sass/examples/mixins.scss
+++ b/docs/_sass/examples/mixins.scss
@@ -9,3 +9,16 @@
 .bulma-delete-mixin {
   @include delete;
 }
+
+.bulma-loader-mixin {
+  @include loader;
+}
+
+.bulma-block-mixin {
+  @include block(1rem);
+}
+
+.bulma-fa-mixin {
+  @include fa(1rem, 2rem);
+  background-color: lavender;
+}
