Finish direction mixins

--- a/docs/_includes/index/beautified.html
+++ b/docs/_includes/index/beautified.html
@@ -9,7 +9,7 @@
     </h2>
 
     <div class="subtitle mb-0 mt-0 has-text-grey-light is-size-4-widescreen">
-      See what Bulma developers are bulding
+      See what Bulma developers are building
     </div>
 
     <a class="button bd-fat-button is-expo is-light is-size-4-widescreen" href="{{ site.data.links.by_id.expo.path }}">
