--- a/docs/_sass/components/content.scss
+++ b/docs/_sass/components/content.scss
@@ -32,6 +32,11 @@
 
   &.title {
     font-size: 1.5em;
+
+    &.is-5 {
+      font-size: 1.25em;
+      margin-top: 0 !important;
+    }
   }
 
   @include until($widescreen) {
