--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -17887,6 +17887,11 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   font-size: 1.5em;
 }
 
+.bd-anchor-title.title.is-5 {
+  font-size: 1.25em;
+  margin-top: 0 !important;
+}
+
 @media screen and (max-width: 1215px) {
   .bd-anchor-title {
     padding-left: 1em;
@@ -22389,4 +22394,160 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   vertical-align: top;
   width: 2rem;
   background-color: lavender;
+}
+
+.bulma-overlay-mixin-parent {
+  background-image: url(https://source.unsplash.com/La2kOu2dmH4/640x320);
+  background-size: cover;
+  border-radius: 0.5em;
+  position: relative;
+  height: 11.25rem;
+  width: 20rem;
+}
+
+.bulma-overlay-mixin {
+  bottom: 1.5rem;
+  left: 1.5rem;
+  position: absolute;
+  right: 1.5rem;
+  top: 1.5rem;
+  background-color: darkorange;
+  border-radius: 0.25em;
+  color: white;
+  opacity: 0.9;
+  padding: 1em;
+}
+
+.bulma-placeholder-mixin {
+  border-color: lightblue;
+}
+
+.bulma-placeholder-mixin::-moz-placeholder {
+  color: lightblue;
+}
+
+.bulma-placeholder-mixin::-webkit-input-placeholder {
+  color: lightblue;
+}
+
+.bulma-placeholder-mixin:-moz-placeholder {
+  color: lightblue;
+}
+
+.bulma-placeholder-mixin:-ms-input-placeholder {
+  color: lightblue;
+}
+
+.bulma-placeholder-mixin:hover {
+  border-color: #60ccf0;
+}
+
+.bulma-placeholder-mixin:focus, .bulma-placeholder-mixin:active {
+  border-color: #1fc7ff !important;
+  box-shadow: 0 0 0 0.125em rgba(31, 199, 255, 0.25) !important;
+}
+
+.bulma-clearfix-mixin::after {
+  clear: both;
+  content: " ";
+  display: table;
+}
+
+.bulma-clearfix-mixin img {
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+}
+
+.bulma-center-mixin-parent {
+  background-image: url(https://source.unsplash.com/xo3Bd2tYeqg/640x320);
+  background-size: cover;
+  border-radius: 0.5em;
+  position: relative;
+  height: 11.25rem;
+  width: 20rem;
+}
+
+.bulma-center-mixin {
+  position: absolute;
+  left: calc(50% - (96px * 0.5));
+  top: calc(50% - (96px * 0.5));
+  border-radius: 8px;
+  height: 96px;
+  width: 96px;
+}
+
+.bulma-reset-mixin {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: none;
+  border: none;
+  color: currentColor;
+  font-family: inherit;
+  font-size: 1em;
+  margin: 0;
+  padding: 0;
+}
+
+.bulma-unselectable-mixin {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.bulma-ltr-rtl-mixin {
+  background-color: lightgreen;
+  padding: 0.5em 1em;
+  border: 1px solid seagreen;
+  margin-right: -1px;
+}
+
+.bulma-ltr-rtl-mixin:first-child {
+  border-bottom-left-radius: 0.5em;
+  border-top-left-radius: 0.5em;
+}
+
+.bulma-ltr-rtl-mixin:last-child {
+  border-bottom-right-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+}
+
+.bulma-ltr-position-mixin-parent {
+  background-color: beige;
+  border-radius: 0.5em;
+  padding: 1rem;
+  padding-left: 5rem;
+  position: relative;
+}
+
+.bulma-ltr-position-mixin-parent p {
+  margin-top: -0.25rem;
+}
+
+.bulma-ltr-position-mixin {
+  left: 1rem;
+  border-radius: 0.25em;
+  position: absolute;
+  top: 1rem;
+}
+
+.bulma-ltr-property-mixin-parent {
+  align-items: flex-start;
+  background-color: midnightblue;
+  border-radius: 0.5em;
+  color: lightskyblue;
+  display: flex;
+  padding: 1.5rem;
+  position: relative;
+}
+
+.bulma-ltr-property-mixin-parent p {
+  margin-top: -0.25rem;
+}
+
+.bulma-ltr-property-mixin {
+  margin-left: 1rem;
+  border-radius: 0.25em;
 }
