Add utilities documentation

--- a/docs/_includes/global/navbar-item.html
+++ b/docs/_includes/global/navbar-item.html
@@ -11,7 +11,7 @@
     is-active
   {% endif %}
 "
-href="{{ site.url }}{{ link.path }}/">
+href="{{ site.url }}{{ link.path }}">
 <span class="icon has-text-{{ link.color }}">
   <i class="{% if link.icon_brand %}fab{% elsif link.icon_regular %}far{% else %}fas{% endif %} fa-{{ link.icon }}"></i>
 </span>
