--- a/docs/_sass/components/code.scss
+++ b/docs/_sass/components/code.scss
@@ -37,6 +37,20 @@
   z-index: 1;
 }
 
+.bd-snippet-inline {
+  display: inline-block;
+  margin-bottom: -0.25em;
+  vertical-align: bottom;
+
+  .highlight pre {
+    padding: 0.5em 0.75em 0.625em;
+  }
+
+  .button.bd-copy {
+    display: none;
+  }
+}
+
 .bd-snippet {
   @extend %block;
   --snippet-spacing: #{$block-spacing};
@@ -159,7 +173,7 @@
     &::before {
       background: linear-gradient(0deg, var(--hl-background), transparent);
       bottom: 0;
-      content: '';
+      content: "";
       display: block;
       left: 0;
       position: absolute;
