--- a/docs/_sass/components/variables.scss
+++ b/docs/_sass/components/variables.scss
@@ -30,14 +30,14 @@
 
     pre {
       overflow: visible;
-      padding: 0;
+      padding: 0.25em 0.5em 0.375em;
       white-space: pre-wrap;
       white-space: break-spaces;
     }
   }
 
   .bd-copy {
-    font-size: 0.5em !important;
+    font-size: 0.75em !important;
     right: 0;
     top: 0;
   }
