--- a/docs/_sass/examples/mixins.scss
+++ b/docs/_sass/examples/mixins.scss
@@ -160,3 +160,27 @@
   @include ltr-property("margin", 1rem, false);
   border-radius: 0.25em;
 }
+
+.bulma-control-mixin {
+  @include control;
+  background: deeppink;
+  color: white;
+
+  &.is-small {
+    @include control-small;
+  }
+
+  &.is-medium {
+    @include control-medium;
+  }
+
+  &.is-large {
+    @include control-large;
+  }
+}
+
+.bulma-control-extend {
+  @extend %control;
+  background: mediumblue;
+  color: white;
+}
