--- a/docs/_sass/pages/docs.scss
+++ b/docs/_sass/pages/docs.scss
@@ -150,6 +150,16 @@
     display: none;
   }
 
+  .bd-docs.bd-is-full-main {
+    .bd-docs-main {
+      grid-column: 2 / span 2;
+    }
+
+    .bd-docs-side {
+      display: none;
+    }
+  }
+
   .bd-docs.bd-is-fullwidth {
     display: block;
 
@@ -199,7 +209,7 @@
           &::after {
             align-items: center;
             bottom: 0;
-            content: '•';
+            content: "•";
             display: flex;
             justify-content: center;
             position: absolute;
@@ -236,7 +246,7 @@
           &::after {
             align-items: center;
             bottom: 0;
-            content: '•';
+            content: "•";
             display: flex;
             justify-content: center;
             position: absolute;
