--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -221,6 +221,7 @@ $navbar-breakpoint: $tablet;
 @import "./_sass/components/fortyfour";
 @import "./_sass/components/spacing-table";
 @import "./_sass/components/survey";
+@import "./_sass/components/color";
 
 @import "./_sass/pages/index";
 @import "./_sass/pages/docs";
