--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -22925,4 +22925,14 @@ fieldset[disabled] .bulma-control-mixin {
   color: white;
 }
 
+.my-element {
+  background: red;
+}
+
+@media screen and (min-width: 1280px) {
+  .my-element {
+    background: blue;
+  }
+}
+
 /*# sourceMappingURL=bulma-docs.css.map */
