Improve catagories menu scrolling
Scrolling through the categories menu, especially on long documentation pages, is very difficult. Allowing overflowing content to scroll will allow users to browser the menu without the need to scroll down to the bottom of the page (or top) to see all items.

--- a/docs/_sass/components/categories.scss
+++ b/docs/_sass/components/categories.scss
@@ -34,6 +34,8 @@
 
   padding: var(--docs-side-padding);
   position: sticky;
+  height: 100vh;
+  overflow: hidden;
   top: 0;
 
   &.bd-has-query {
