Replace disabled attr on pagination anchor elements with is-disabled class (#3296)

--- a/docs/documentation/components/pagination.html
+++ b/docs/documentation/components/pagination.html
@@ -46,7 +46,7 @@ meta:
 
 {% capture pagination_options_example %}
 <nav class="pagination" role="navigation" aria-label="pagination">
-  <a class="pagination-previous" title="This is the first page" disabled>Previous</a>
+  <a class="pagination-previous is-disabled" title="This is the first page">Previous</a>
   <a class="pagination-next">Next page</a>
   <ul class="pagination-list">
     <li>
