Setup Cypress tests for box and button

--- a/docs/_sass/components/categories.scss
+++ b/docs/_sass/components/categories.scss
@@ -32,6 +32,8 @@
 .bd-categories {
   --height: 1.25;
 
+  overflow-y: auto;
+  max-height: 100vh;
   padding: var(--docs-side-padding);
   position: sticky;
   top: 0;
