Add container tests

--- a/docs/_layouts/cypress.html
+++ b/docs/_layouts/cypress.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ site.url }}/vendor/fontawesome-free-5.15.2-web/css/all.min.css">
     <link rel="stylesheet" href="{{ site.url }}/css/bulma.css?v={{ site.time | date: "%Y%m%d%H%M" }}">
   </head>
-  <body style="padding: 1.5rem;">
+  <body>
     {{ content }}
   </body>
 </html>
