--- a/docs/bulma.scss
+++ b/docs/bulma.scss
@@ -1,2 +1,30 @@
 @charset "utf-8";
 @import "../bulma";
+
+.yolo {
+  content: "default";
+}
+
+@include tablet {
+  .yolo {
+    content: "tablet";
+  }
+}
+
+@include desktop {
+  .yolo {
+    content: "desktop";
+  }
+}
+
+@include widescreen {
+  .yolo {
+    content: "widescreen";
+  }
+}
+
+@include fullhd {
+  .yolo {
+    content: "fullhd";
+  }
+}
