--- a/docs/css/bulma.css
+++ b/docs/css/bulma.css
@@ -11788,3 +11788,31 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
+
+.yolo {
+  content: "default";
+}
+
+@media screen and (min-width: 769px), print {
+  .yolo {
+    content: "tablet";
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .yolo {
+    content: "desktop";
+  }
+}
+
+@media screen and (min-width: 1216px) {
+  .yolo {
+    content: "widescreen";
+  }
+}
+
+@media screen and (min-width: 1408px) {
+  .yolo {
+    content: "fullhd";
+  }
+}
