--- a/docs/_includes/global/scripts.html
+++ b/docs/_includes/global/scripts.html
@@ -4,6 +4,15 @@
 
 <script src="{{ site.url }}/lib/main.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-82634666-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-82634666-2');
+</script>
+
 {% if page.route == 'index' %}
   <script src="https://player.vimeo.com/api/player.js" ></script>
   <script type="text/javascript" src="{{ site.url }}/lib/index.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
