--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -1,3 +1,5 @@
+@import "../utilities/mixins"
+
 $icon-dimensions: 1.5rem !default
 $icon-dimensions-small: 1rem !default
 $icon-dimensions-medium: 2rem !default
